# screw

./: BonusCard.cpp  BonusCard.h  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  PenaltyCard.cpp  PenaltyCard.h  Player.cpp  Player.h  README.md  StandardCard.cpp  StandardCard.h  main.cpp
